LIST OF CHANGES

release 104.0.0 (2025-03-10)
 - Do not send emails to followers if the event relates to a run or a lane
   that was sequenced on a non-Illumina instrument.
 - Following deletion of the instrument_utilisation table from the tracking
   database, dropped exclusion of this table from a script that generates ORM.

release 103.0.0 (2025-02-20)
 - Replace mark docker image with mark golang executable from github,
   on ISG's docker image, for documentation publishing
 - Deleted unused methods from a number of models and views.
   - npg::model::instrument_annotation -
      annotations_by_instrument_over_default_uptime,
      dates_of_annotations_over_default_uptime
   - npg::view::run -
      list_summary, selected_days
   - npg::model_run_status -
       current_run_statuses, latest_current_run_status,
       active_runs_over_last_30_days, epoch
 - Deleted 'Stuck Runs' button from the admin top-level menu,
   the associated template and the view and model methods.
 - Deleted instrument_utilisation table from the tracking database. All
   code that was using this table was removed long time ago. Tha last
   record in this table is from 2016-11-12. The reports about instrument
   utilisation are now generated dynamically by C<bin/illumina_instruments_uptime> -
   a script in this package.
 - Added two new statuses to run_lane_status_dict database table,
   'archival in progress' and 'lane released'. This new statuses will drive
   lane-level archival and user notification system.
 - Replace mark docker image with mark golang executable from github,
   on ISG's docker image, for documentation publishing
 - Deleted two unused methods from npg::model::instrument_annotation,
   annotations_by_instrument_over_default_uptime and
   dates_of_annotations_over_default_uptime
 - Tracking web server:
   - Added a new optional parameter 'manufacturer' to methods returning lists
     of runs and run count - the name of the manufacturer. If this name is