@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 20;
+use Test::More tests => 16;
 use Sys::Hostname;
 use Cwd;
 
@@ -23,17 +23,12 @@ my $command = q{perl -e '$|=1;while(1){print "daemon running\n";sleep5;}' || ech
 {
     my $r = npg_tracking::daemon->new(timestamp=>$timestamp);
     is($r->libs, undef, 'libs undef by default');
-    is($r->hosts->[0], $hostname, 'default host name is this host');
     is($r->command, $default_command, 'default command');
     is($r->daemon_name, 'daemon', 'default daemon name');
 
-    is($r->start($hostname), qq([[ -d $log_dir && -w $log_dir ]] && daemon -i -r -a 10 -n daemon --umask 002 -A 10 -L 10 -M 10 -o $log_dir/daemon-) . $hostname . qq[-$timestamp.log -- $command], 'start command on local host');
-    is($r->ping($hostname), q[daemon --running -n daemon && ((if [ -w /tmp/daemon.pid ]; then touch -mc /tmp/daemon.pid; fi) && echo -n 'ok') || echo -n 'not ok'], 'ping command on local host');
-    is($r->stop($hostname), q[daemon --stop -n daemon], 'stop command on local host');
-
-    is($r->start(), qq([[ -d $log_dir && -w $log_dir ]] && daemon -i -r -a 10 -n daemon --umask 002 -A 10 -L 10 -M 10 -o $log_dir/daemon-) . $hostname . qq[-$timestamp.log -- $command], 'start command with an undefined host');
-    is($r->ping(), q[daemon --running -n daemon && ((if [ -w /tmp/daemon.pid ]; then touch -mc /tmp/daemon.pid; fi) && echo -n 'ok') || echo -n 'not ok'], 'ping command with an undefined host');
-    is($r->stop(), q[daemon --stop -n daemon], 'stop command with an undefined host');
+    is($r->start(), qq([[ -d $log_dir && -w $log_dir ]] && daemon -i -r -a 10 -n daemon --umask 002 -A 10 -L 10 -M 10 -o $log_dir/daemon-) . $hostname . qq[-$timestamp.log -- $command], 'start command on local host');
+    is($r->ping(), q[daemon --running -n daemon && ((if [ -w /tmp/daemon.pid ]; then touch -mc /tmp/daemon.pid; fi) && echo -n 'ok') || echo -n 'not ok'], 'ping command on local host');
+    is($r->stop(), q[daemon --stop -n daemon], 'stop command on local host');
 }
 
 {   # production users are defined in t/.npg/npg_tracking
@@ -46,18 +41,11 @@ my $command = q{perl -e '$|=1;while(1){print "daemon running\n";sleep5;}' || ech
 }
 
 {
-    my $hostname = q[sf18-nfs];
-    my $command = q{perl -e '$|=1;while(1){print "daemon running\n";sleep5;}' || echo Log directory } . $log_dir . q{ for staging host } . $hostname . q{ cannot be written to};
-
     my $r = npg_tracking::daemon->new(timestamp => $timestamp,
                                       libs      => ['/dodo/lib1', '/dada/lib2'],
-                                      hostname => $hostname,
                                      );
-    is($r->start($hostname), qq([[ -d $log_dir && -w $log_dir ]] && daemon -i -r -a 10 -n daemon --env="PERL5LIB=/dodo/lib1:/dada/lib2" --umask 002 -A 10 -L 10 -M 10 -o $log_dir/daemon-$hostname-$timestamp.log -- $command), 'start command on local host');
+    is($r->start(), qq([[ -d $log_dir && -w $log_dir ]] && daemon -i -r -a 10 -n daemon --env="PERL5LIB=/dodo/lib1:/dada/lib2" --umask 002 -A 10 -L 10 -M 10 -o $log_dir/daemon-$hostname-$timestamp.log -- $command), 'start command on local host');
   
-    $hostname = hostname;
-    $command = q{perl -e '$|=1;while(1){print "daemon running\n";sleep5;}' || echo Log directory } . $log_dir . q{ for staging host } . $hostname . q{ cannot be written to};
-
     $r = npg_tracking::daemon->new(timestamp=>$timestamp,env_vars => {http_proxy=>'myproxy',});
     is($r->start(), qq([[ -d $log_dir && -w $log_dir ]] && daemon -i -r -a 10 -n daemon --env="http_proxy=myproxy" --umask 002 -A 10 -L 10 -M 10 -o $log_dir/daemon-) . $hostname . qq[-$timestamp.log -- $command], 'start command with an undefined host when PERL5LIB should be set');
 
